Fixes issues on mobile.

--- a/src/styles/components/tables.less
+++ b/src/styles/components/tables.less
@@ -1,18 +1,16 @@
 @media only screen and (min-width: @width-xs) and (min-height: @width-xs) {
-	.skill-table {
-		display: none;
-	}
+  .skill-table {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: @width-xs) and (min-height: @width-sm) {
-	.skill-table {
-		bottom: 30px;
-		display: block;
-		text-align: left;
-		left: 30px;
-		position: absolute;
-		right: 30px;
-	}
+@media only screen and (min-width: @width-xs) {
+  .skill-table {
+    display: block;
+    margin-bottom: 30px;
+    position: relative;
+    text-align: left;
+  }
 }
 
 @media only screen and (min-width: @width-sm) {
